# benchmarking-sd

./: README.md  benchmark.py  benchmark_data.csv  graphcreation.py  jsonconversion.py  mlperf_log.txt  pyproject.toml  requirements.txt  setup.g3s.xlarge.sh  setup.g4dn.2xlarge.sh  setup.g5.xlarge.sh  setup.g5g.2xlarge.sh  setup.g5g.xlarge.sh  setup.g6.2xlarge.sh  setup.g6.xlarge.sh  setup.p2.xlarge.sh  setup.p3.2xlarge.sh  setup.p4d.24xlarge.sh  setup.p5.48xlarge.sh  setup.sh  text.py
.github/workflows/: python-publish.yml
g3s.xlarge/log/: mlperf_log.txt
g4dn.2xlarge/log/: mlperf_log.json  mlperf_log.txt
g4dn.xlarge/log/: mlperf_log.txt
g5.2xlarge/log/: mlperf_log.json  mlperf_log.txt
g5.xlarge/log/: mlperf_log.txt
g6.2xlarge/log/: mlperf_log.json  mlperf_log.txt
g6.xlarge/log/: mlperf_log.txt
p3.2xlarge/log/: mlperf_log.json  mlperf_log.txt
p4d.24xlarge/log/: mlperf_log.json  mlperf_log.txt
p5.48xlarge/log/: mlperf_log.json  mlperf_log.txt
sd1/csv/: benchmark_data.csv
sd1/g3s.xlarge/log/: mlperf_log.json
sd1/g4dn.xlarge/log/: mlperf_log.json
sd1/g5.xlarge/log/: mlperf_log.json
sd1/g6.xlarge/log/: mlperf_log.json
sd1/p3.2xlarge/log/: mlperf_log.json
sd1/p4d.24xlarge/log/: mlperf_log.json
sd1/p5.48xlarge/log/: mlperf_log.json
