### `pyproject.toml`
```toml
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmarking-sd"
version = "0.1.0"
description = "Benchmarking Stable Diffusion performance across GPU hardware"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Yash Jani", email = "yash@example.com" }]

# Runtime requirements
dependencies = [
    "torch>=2.0",
    "diffusers>=0.26",
    "transformers>=4.38",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "boto3>=1.34"
]

# Extras for local development / CI
[project.optional-dependencies]
dev = ["pytest", "ruff", "build", "twine"]

# Expose a shell command `benchmarking-sd`
[project.scripts]
benchmarking-sd = "benchmarking_sd.cli:main"

# ---------------- setuptools ---------------
[tool.setuptools]
package-dir = { "" = "benchmarking_sd" }
include-package-data = true

[tool.setuptools.package-data]
"benchmarking_sd.data" = ["*.csv", "*.png"]
```
